[package]
name = "serde_default"
version = "0.1.0"
authors = ["Ted Driggs <t.driggs@outlook.com>"]
edition = "2018"
repository = "https://github.com/TedDriggs/serde_default"
license = "MIT"
description = "Generate a Default impl using serde attributes"

[lib]
proc-macro = true

[dependencies]
darling = "0.13.1"
quote = "1.0.14"
syn = "1.0.85"
proc-macro2 = "1.0.36"
