[package]
name = "serde_default"
version = "0.2.0"
authors = ["Ted Driggs <t.driggs@outlook.com>"]
edition = "2018"
repository = "https://github.com/TedDriggs/serde_default"
license = "MIT"
description = "Generate a Default impl using serde attributes"

[lib]
proc-macro = true

[dependencies]
darling = "0.20.8"
quote = "1.0.14"
syn = "2.0.52"
proc-macro2 = "1.0.36"
